@@ -1,0 +1,10 @@
+<header>Template for certificate path</header>
+
+By default, Virtualmin will create the SSL certificate for the virtual servers
+in the file <tt>ssl.cert</tt> in the server's home directory. However, this
+option can be used to specify a different path. <p>
+
+<include subs>
+
+<footer>
+
