@@ -1,0 +1,10 @@
+<header>Template for private key path</header>
+
+By default, Virtualmin will create the SSL private key for the virtual servers
+in the file <tt>ssl.key</tt> in the server's home directory. However, this
+option can be used to specify a different path. <p>
+
+<include subs>
+
+<footer>
+
