@@ -618,3 +618,4 @@ Added a section to the Spam and Virus Delivery page for changing the virus scann
 Updated the modify-spam.pl program to add the --use-clamscan and --use-clamdscan program.
 When a virtual server with a website and private IP address is deleted, any Listen directives added for its IP are removed from the Apache configuration.
 Added a Module Config option to change the default SSL key size, and increased the default to 1024 bits.
+Added Module Config options for choosing different locations for servers' SSL certificate and key files.
